fixed card_text gap and text

--- a/style.css
+++ b/style.css
@@ -174,6 +174,8 @@ main {
 .card_text.reverse {
   padding-right: 64px;
   padding-left: 0px;
+  align-items: end;
+  text-align: end;
 }
 footer {
   width: 100%;
